# sim

./: .env.example  .gitignore  .gitmodules  AGENTS.md  Makefile  README.md  README_TESTING_BRANCH.md  launch.bat  lefthook.yml  main.py  manual_flight_gui.py  pyproject.toml  pyrightconfig.json  requirements.txt  sim.config.json  test_square.py
.github/workflows/: ruff.yml
.venv-manual/: pyvenv.cfg
.venv-manual/Scripts/: activate  activate.bat
aigp/: main.py  requirements.txt
aigp/comms/: mavlink_client.py
airsim/: __init__.py  client.py  types.py
comms/: __init__.py  heartbeat_stress_test.py  mavlink_client.py  mavlink_parser.py  mock_simulator.py  telemetry_test.py
course/4/3T/: HHX1NAV4S4V6LC7QPPPT1Y.uasset
course/wall/FlyingExampleMapV2/5/JW/: V2RS23SNRQG2YQP68QA4K6.uasset
course/wall/FlyingExampleMapV2/C/IP/: IH1T1AX9J2FKOQP00OGXAO.uasset
docs/: AIRSIM_MAP_MIGRATION.md  GITHUB.md  MANUAL_FLIGHT_WINDOWS.md
msgpackrpc/: __init__.py  address.py  client.py  error.py  future.py  message.py
scripts/: calibrate_depth.py  deploy_maze_sim.ps1  download_models.py  extract_airsim_maps.ps1  fix_project_path.ps1  heartbeat_stress_test.py  install.ps1  install.sh  launch.bat  launch.ps1  launch.py  launch.sh  patch_maze_config.py
src/: airsim_maze_flight.py  config.py  course_sync.py  landing_telemetry.py  manual_virtual_controller.py  preflight.py  sim_launch.py
src/backends/: __init__.py  mavlink_client.py
src/comms/: __init__.py  command.py  mavlink_parser.py  mock_simulator.py  state.py  telemetry.py
src/control/: __init__.py  maze_runtime.py
src/control/algorithms/: __init__.py  attitude_four_motion.py  autonomous_explore.py  maze_straight_collision.py  obstacle_stop.py  opencv_landing.py  scan_and_lock.py  six_directions.py  vision_guided_control.py
src/planning/: waypoint.py
src/vision/: __init__.py  depth_perception.py  feed.py  frame_metrics.py  mapping.py  processing.py
tests/: test_mavlink_parser.py  test_telemetry_client.py
