[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "aigp-drone"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "msgpack",
    "numpy",
]

[project.scripts]
sim = "src.sim_launch:main"
sim-very-soft = "src.sim_launch:main_very_soft"
preflight = "src.preflight:main"

[dependency-groups]
dev = [
    "lefthook",
]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    "packages/",
    "manual_flight_gui.py",
    "test_square.py",
    ".venv/",
    "opensrc/",
    ".claude/",
    ".sisyphus/",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
