[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "aigp-drone"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "msgpack",
    "numpy",
    "opencv-python-headless>=4.8,<5",
    "pillow>=12.2.0",
]

[project.optional-dependencies]
manual = [
    "pyvjoy",
    "pynput",
    "PySimpleGUI<5",
]

[project.scripts]
sim = "src.sim_launch:main"
sim-very-soft = "src.sim_launch:main_very_soft"
sim-low-end = "src.sim_launch:main_low_end"
calibrate = "src.sim_launch:main_calibrate"
preflight = "src.preflight:main"

[dependency-groups]
dev = [
    "lefthook",
]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".venv/",
    "airsim/",
    "msgpackrpc/",
    "opensrc/",
    ".claude/",
    ".sisyphus/",
    ".ruff_cache/",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
